[BUGFIX] Secondary inspector close button hidden behind HTML editor
Releases: master
Related: NEOS-124
Original-Commit-Hash: 3cb638ae3aae6c7418926b9d4d8abc6bdb23b00e

--- a/TYPO3.Neos/Resources/Private/Styles/Inspector/_SecondaryInspector.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Inspector/_SecondaryInspector.scss
@@ -50,6 +50,7 @@
 		height: $unit + 1;
 		background-color: $grayDark;
 		border: 1px solid $grayLight;
+		z-index: 10015;
 		@include opacity(1);
 		@include icon-FontAwesome();
 		@include transition-property(top, right);
